<resources>
    <string name="app_name">My App-fil rouge</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="description">Description</string>
    <string name="prix">Prix</string>
    <string name="sortie_initial">Sortie Initial</string>
    <string name="titre">Titre</string>
    <string name="cr_ation_d_un_article">Création d\'un article</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>